# Money-flow-momentum

./: .env.example  .gitignore  README.md  bootstrap_config.py  install.sh  money-flow-momentum-automation.service  money-flow-momentum-automation.timer  money-flow-momentum-demo-automation.service  money-flow-momentum-demo-automation.timer  money-flow-momentum-demo.service  money-flow-momentum-live.service  money-flow-momentum.service  pyproject.toml  requirements.txt  run_bot.py
config/: config.demo.yaml  config.live.yaml  config.yaml  config.yaml.example
docs/: ARCHITECTURE.md  BURN_IN_AND_LIVE_VALIDATION.md  BURN_IN_OPERATOR_RUNBOOK.md  DEPLOYMENT_AND_HEALTHCHECKS.md  DEPLOYMENT_CHECKLIST.md  GO_LIVE_SAFELY.md  INSTALL_AND_RUN_GUIDE.md  LIMITATIONS.md  MONITORING_AND_ALERTING.md  OPTIMIZATION_WORKFLOW.md  PROMOTION_AND_ROLLBACK.md  REGIME_FILTERS_AND_THRESHOLDS.md  STAGE3_ADAPTIVE_FRAMEWORK.md  STAGE4_STRATEGY_REFINEMENT.md  STAGE5_PLATFORM_AND_PORTFOLIO.md
scripts/: automation_status.sh  backup_config.sh  check_burnin.sh  check_health.sh  check_small_live_ready.sh  generate_burnin_bundle.sh  incident_stop.sh  install_systemd.sh  live_trade.sh  operator_menu.sh  paper_trade.sh  post_burnin_pipeline.sh  promote_demo_to_live.sh  service_status.sh  show_runtime_mode.sh  start_demo_research.sh  start_live_guarded.sh  start_small_live.sh  start_testnet_burnin.sh  status_demo.sh  status_live.sh  tail_logs.sh  validate_env.sh
src/: __init__.py  main.py
tests/: __init__.py  test_automation.py  test_bootstrap_config.py  test_burnin.py  test_config.py  test_dual_key.py  (+31 more)
(+229 files in other folders)
